Improvements and fixes to Share Search results page:  - Description text shown if present  - Additional object meta-data now shown and in readable textual style  - Clicking tag links or Search All Sites toggle or performing another search from the search box will always perform full page refresh  - CSS cleanup
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@13498 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/search/search.css
+++ b/root/projects/slingshot/source/web/components/search/search.css
@@ -1,8 +1,10 @@
-.search {
+.search
+{
 	margin: 0 -10px;
 }
 
-.search .hidden {
+.search .hidden
+{
   display: none;
 }
 
@@ -17,50 +19,39 @@
 	display: none;
 }
 
-#template_search_search-results {
-  position: relative;
-  height:auto !important;
-  min-height: 99%;
-  height: 99%;
+.search .results
+{
+   margin-right: 1px;
 }
 
-.search .resultbar {
+.search .resultbar
+{ 
 	padding: 8px 10px;
 	background-color: #E3EAEC;
-	border-bottom: 2px solid #F0F3F4;
-	border-top: 2px solid #F0F3F4;
+	border-bottom: 1px solid #F0F3F4;
+	border-top: 1px solid #F0F3F4;
 	height: 1.25em;
 }
 
-.search .resultbar.gobottom {	
-	width: 99%;
-	position: absolute;	
-	bottom: 2.4em;
-}
-
-.search .itemname a {
+.search .itemname a
+{
    font-size: 116%;
    color: #276FB6;
 }
 
-.search tr.yui-dt-odd, tr.yui-dt-even {
+.search tr.yui-dt-odd, tr.yui-dt-even
+{
    background-color: #ffffff !important;
 }
 
-.search .yui-dt td {
+.search .yui-dt td
+{
    border-bottom: 1px dashed #D7D7D7;
 }
 
-#template_title_search div.float-right {
-	margin-top: 4px;
-	float: right;
-}
-
-#template_title_search div.float-left {
-	float: left;
-}
-
-#template_title_search .back-icon {
-	padding-left: 22px;
-	background: url(../images/back-arrow.png) no-repeat center left;
+.search .results .details span.tags
+{
+   background-image: url(images/tag-16.png);
+   background-position: 0px 2px;
+   background-repeat: no-repeat;
 }
